derive/tests/snapshots/hash_index/Session/get_all_sessions.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `session` table.
    pub fn get_all_sessions<'a>(&'a self) -> impl Iterator<Item = Session> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session().iter()
    }
}
