derive/tests/snapshots/hash_index/Session/get_sessions_by_region_and_shard.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Session` iterator that contains all rows in the `session` table whose values match the values from the multi-column hash index `region_and_shard` on the columns `region_id` and `shard_id`.
    pub fn get_sessions_by_region_and_shard<'a>(
        &'a self,
        region_id: &'a u64,
        shard_id: &'a u64,
    ) -> impl Iterator<Item = Session> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session().region_and_shard().filter((region_id, shard_id))
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Session` iterator that contains all rows in the `session` table whose values match the values from the multi-column hash index `region_and_shard` on the columns `region_id` and `shard_id`.
    pub fn get_sessions_by_region_and_shard<'a>(
        &'a self,
        region_id: &'a u64,
        shard_id: &'a u64,
    ) -> impl Iterator<Item = Session> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session().region_and_shard().filter((region_id, shard_id))
    }
}
