derive/tests/snapshots/hash_index/Session/get_sessions_by_token.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Session` iterator that contains all rows in the `session` table whose value matches the value from the single-column hash index on the `token` column.
    pub fn get_sessions_by_token<'a>(
        &'a self,
        token: &'a str,
    ) -> impl Iterator<Item = Session> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session().token().filter(token)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Session` iterator that contains all rows in the `session` table whose value matches the value from the single-column hash index on the `token` column.
    pub fn get_sessions_by_token<'a>(
        &'a self,
        token: &'a str,
    ) -> impl Iterator<Item = Session> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().session().token().filter(token)
    }
}
